2024-12-27  Zhengyi Fu  <i@fuzy.me>

	* init.el: fix the error occurred when configuring diff-hl

	* ChangeLog.1: Imported from Git

	* init.el: optimize loading of diff-hl
	(+eshell/here): Fix for Emacs 31.1
	(+eshell/other-window): Fix for Emacs 31.1

	* straight/versions/dotemacs.el: Update magit

2024-12-26  Zhengyi Fu  <zhengyi@vbox>

	* site-lisp/quick-init.el: Add a simple init file for use with emacs -Q

	* init.el (+custom-fontset): move fontset configuration code to a function
	(+custom-faces): customize `default', `variable-pitch' face
	(+buffer-terminator-load-timer): better way of loading `buffer-terminator'