@@ -948,9 +948,12 @@ value for USE-OVERLAYS."
   (defvar eshell-buffer-name)
   (with-suppressed-warnings ((obsolete display-comint-buffer-action))
     (defvar display-comint-buffer-action)
-    (cl-letf ((eshell-buffer-name (format "*%s : eshell*" (abbreviate-file-name default-directory)))
-              (display-comint-buffer-action '(() (inhibit-same-window . t)))
-              ((alist-get '(category . comint) display-buffer-alist nil t #'equal) '(() (inhibit-same-window . t))))
+    (let ((eshell-buffer-name (format "*%s : eshell*" (abbreviate-file-name default-directory)))
+          (display-comint-buffer-action '(() (inhibit-same-window . t)))
+          (display-buffer-alist (cons '((category . comint)
+                                        nil
+                                        (inhibit-same-window . t))
+                                      display-buffer-alist)))
       (eshell))))
 
 (defun +eshell/other-window ()
@@ -958,8 +961,11 @@ value for USE-OVERLAYS."
   (interactive)
   (with-suppressed-warnings ((obsolete display-comint-buffer-action))
     (defvar display-comint-buffer-action)
-    (cl-letf ((display-comint-buffer-action '(() (inhibit-same-window . t)))
-              ((alist-get '(category . comint) display-buffer-alist nil t #'equal) '(() (inhibit-same-window . t))))
+    (let ((display-comint-buffer-action '(() (inhibit-same-window . t)))
+          (display-buffer-alist (cons '((category . comint)
+			                nil
+			                (inhibit-same-window . t))
+			              display-buffer-alist)))
       (eshell))))
 
 (defvar eshell-hist-mode-map)
