@@ -1,6 +1,7 @@
 2024-12-27  Zhengyi Fu  <i@fuzy.me>
 
 	* init.el: fix the error occurred when configuring diff-hl
+	(+eshell/here, +eshell/other-window): Use let and cons instead of cl-letf
 
 	* ChangeLog.1: Imported from Git
 
